--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@ não quebrar linha, apenas muda de forma viusal o texto.</p>
     </li>
 </ul>
 
+<a href="https://api.whatsapp.com/send/?phone=5514998783354&text=Olá%20Camarada!" target="_blank">
+    <img src="https://img.freepik.com/vetores-premium/o-whatsapp_798572-489.jpg?semt=ais_hybrid&w=740&q=80" alt="Icone do Whatsapp"
+    width="100" height="100">
+</a>
+
+
 </body>
 
 
